--- a/Lesson 2 (04-03)/2020_DPO_2_0_Problems_Solution.ipynb
+++ b/Lesson 2 (04-03)/2020_DPO_2_0_Problems_Solution.ipynb
@@ -55,7 +55,7 @@
     "print(f'Студент: {student[0].split()[1]}, {student[0].split()[0]}')\n",
     "print(f'Возраст: {2020 - student[1]}')\n",
     "print('Оценки: ', end = ' ')\n",
-    "print(', '.join(student[2]), sep=',')\n",
+    "print(*student[2], sep=',')\n",
     "print(f'Средний балл студента: {average}')\n",
     "print(f'Повышенная стипендия: {average >= 8}')"
    ]
@@ -131,10 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (∩｀-´)⊃━☆ﾟ.*･｡ﾟ\n",
+    "lst = input().split()\n",
+    "print(len(set(lst)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,10 +179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# считываем значения для каждого студента. input() принимает на ввод строку вида 'немецкий право математика'\n",
+    "# split() разбивает ее по пробелам и делает из нее список вида ['немецкий', 'право', 'математика'] (каждое слово, отделенное пробелом, стало объектом в нем)\n",
+    "# set() из этого списка делает множество (уникальные предметы, которые выбрал студент)\n",
+    "stud1 = set(input().split())\n",
+    "stud2 = set(input().split())\n",
+    "stud3 = set(input().split())\n",
+    "print(len(stud1 & stud2 & stud3)) # находим пересечение трех множеств (факультативы, которые общие для всех трех студентов) и смотрим, сколько объектов в этом множестве (len())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,17 +219,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "немецкий,английский,математика\n"
+     ]
+    }
+   ],
+   "source": [
+    "# решение 1\n",
+    "stud1 = set(input().split())\n",
+    "stud2 = set(input().split())\n",
+    "cancelled = input()\n",
+    "\n",
+    "opened = (stud1 | stud2)\n",
+    "opened.discard(cancelled)\n",
+    "print(*opened, sep=', ')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "немецкий, английский, математика\n"
+     ]
+    }
+   ],
+   "source": [
+    "# решение 2\n",
+    "stud1 = set(input().split())\n",
+    "stud2 = set(input().split())\n",
+    "cancelled = set([input()])\n",
+    "\n",
+    "opened = (stud1 | stud2) ^ cancelled\n",
+    "print(*opened, sep=', ')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,10 +275,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'разработчик'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_of_lists = {'Список1': [{'Python': 'язык программирования'}, {'R':'язык программирования', 'LaTEX' : 'язык верстки' }], \n",
+    "                 'Список2' : [{'Windows' : ['операционная система', 'разработчик'], 'UNIX' : 'операционная система'},\n",
+    "                              {'IBM': ['компания-производитель', 'разработчик'], 'IPv6' : 'интернет-протокол' }]}\n",
+    "\n",
+    "# ваше решение здесь\n",
+    "\n",
+    "dict_of_lists['Список2'][0]['Windows'][1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,7 +353,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# решение здесь\n",
+    "a = input()\n",
+    "print(a[2])\n",
+    "print(a[-2])\n",
+    "print(a[0:5])\n",
+    "print(a[:-2])\n",
+    "print(a[::2])\n",
+    "print(a[1::2])\n",
+    "print(a[::-1])\n",
+    "print(a[::-2])\n",
+    "print(len(a))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -336,10 +428,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Это нормально\n",
+      "Плохо\n"
+     ]
+    }
+   ],
+   "source": [
+    "# решение здесь\n",
+    "mark = int(input(\"Введите оценку: \"))\n",
+    "\n",
+    "if mark < 10:\n",
+    "    print(\"Это нормально\")\n",
+    "elif mark == 10:\n",
+    "    print(\"Отлично\")\n",
+    "if mark < 6:\n",
+    "    print(\"Плохо\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,10 +461,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Это нормально\n"
+     ]
+    }
+   ],
+   "source": [
+    "# решение здесь\n",
+    "\n",
+    "if mark < 10:\n",
+    "    print(\"Это нормально\")\n",
+    "elif mark == 10:\n",
+    "    print(\"Отлично\")\n",
+    "elif mark < 6:\n",
+    "    print(\"Плохо\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -372,10 +500,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# место для решения\n",
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "c = int(input())\n",
+    "\n",
+    "if a == b == c:\n",
+    "    print(3)\n",
+    "elif a == b or a == c or b == c:\n",
+    "    print(2)\n",
+    "else:\n",
+    "    print(0)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -402,10 +550,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# место для решения\n",
+    "\n",
+    "x = int(input())\n",
+    "number = 2\n",
+    "\n",
+    "while number <= x:\n",
+    "    if x % number == 0:\n",
+    "        print(number)\n",
+    "        break\n",
+    "    else:\n",
+    "        number += 1"
+   ]
   }
  ],
  "metadata": {
@@ -424,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
