--- a/Problems/3_Howework/3_Homework.ipynb
+++ b/Problems/3_Howework/3_Homework.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Центр непрерывного образования\n",
-    "# Программа «Python для автоматизации и анализа данных»¶\n",
+    "### Лабораторная/Домашняя работа 3  \n",
     "\n",
-    "Лабораторная/Домашняя работа # 3  \n",
     "Автор: Михаил Густокашин\n",
     "\n",
     "#### Disclaimer\n",
@@ -116,7 +114,7 @@
    "source": [
     "# Задание 5. Зарплата (1.5 балла)\n",
     "\n",
-    "Главный бухгалтер компании \"Рога и копыта\" случайно удалил ведомость с начисленной зарплатой. К счастью, у него сохранились расчётные листки всех сотрудников. Помогите по этим расчётным листкам восстановить зарплатную ведомость. Архив с расчётными листками доступен по ссылке https://github.com/rogovich/2020_DPO_PythonProg/raw/master/%40Problems/3_Howework/rogaikopyta.zip(вы можете скачать и распаковать его вручную или самостоятельно научиться делать это с помощью скрипта на Питоне (например, вот a для zip как раз есть https://docs.python.org/3/library/zipfile.html).\n",
+    "Главный бухгалтер компании \"Рога и копыта\" случайно удалил ведомость с начисленной зарплатой. К счастью, у него сохранились расчётные листки всех сотрудников. Помогите по этим расчётным листкам восстановить зарплатную ведомость. Архив с расчётными листками доступен по ссылке https://github.com/roctbb/dpo-python/raw/master/Problems/3_Howework/rogaikopyta.zip(вы можете скачать и распаковать его вручную или самостоятельно научиться делать это с помощью скрипта на Питоне (например, вот a для zip как раз есть https://docs.python.org/3/library/zipfile.html).\n",
     "\n",
     "Ведомость должна содержать 1000 строк, в каждой строке должно быть указано ФИО сотрудника и, через пробел, его зарплата. Сотрудники должны быть упорядочены по алфавиту. Сохраните ответ в файл и приложите его к архиву с решениями.\n",
     "\n",
@@ -138,7 +136,7 @@
    "source": [
     "# Задание 6. Медиана (2 балла)\n",
     "\n",
-    "Вася планирует карьеру и переезд. Для это составил таблицу, в которой для каждого региона записал зарплаты для разных интересные ему профессий. Таблица доступна по ссылке https://github.com/rogovich/2020_DPO_PythonProg/raw/master/%40Problems/3_Howework/salaries.xlsx. Выведите название региона с самой высокой медианной зарплатой (медианой называется элемент, стоящий в середине массива после его упорядочивания) и, через пробел, название профессии с самой высокой средней зарплатой по всем регионам."
+    "Вася планирует карьеру и переезд. Для это составил таблицу, в которой для каждого региона записал зарплаты для разных интересные ему профессий. Таблица доступна по ссылке https://github.com//roctbb/dpo-python/raw/master/Problems/3_Howework/salaries.xlsx. Выведите название региона с самой высокой медианной зарплатой (медианой называется элемент, стоящий в середине массива после его упорядочивания) и, через пробел, название профессии с самой высокой средней зарплатой по всем регионам."
    ]
   },
   {
@@ -156,7 +154,7 @@
    "source": [
     "# Задание 7. Вася-завхоз (1.5 балла)\n",
     "\n",
-    "Васю назначили завхозом в туристической группе и он подошёл к подготовке ответственно, составив справочник продуктов с указанием калорийности на 100 грамм, а также содержание белков, жиров и углеводов на 100 грамм продукта. Ему не удалось найти всю информацию, поэтому некоторые ячейки остались незаполненными (можно считать их значение равным нулю). Также он использовал какой-то странный офисный пакет и разделял целую и дробную часть чисел запятой. Таблица доступна по ссылке https://github.com/rogovich/2020_DPO_PythonProg/blob/master/%40Problems/3_Howework/trekking1.xlsx\n",
+    "Васю назначили завхозом в туристической группе и он подошёл к подготовке ответственно, составив справочник продуктов с указанием калорийности на 100 грамм, а также содержание белков, жиров и углеводов на 100 грамм продукта. Ему не удалось найти всю информацию, поэтому некоторые ячейки остались незаполненными (можно считать их значение равным нулю). Также он использовал какой-то странный офисный пакет и разделял целую и дробную часть чисел запятой. Таблица доступна по ссылке https://github.com/roctbb/dpo-python/blob/master/Problems/3_Howework/trekking1.xlsx\n",
     "Вася хочет минимизировать вес продуктов и для этого брать самые калорийные продукты. Помогите ему и упорядочите продукты по убыванию калорийности. В случае, если продукты имеют одинаковую калорийность - упорядочите их по названию. \n",
     "\n",
     "В качестве ответа необходимо вывести названия продуктов, по одному в строке.\n"
@@ -188,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
